Add cmake target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ project(SCARP
 
 include(GNUInstallDirs)
 
+set(PROJECT_NAMESPACE "${PROJECT_NAME}::")
+
 set(CMAKE_CXX_STANDARD 14)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
@@ -35,3 +37,33 @@ if(CMAKE_BUILD_TYPE MATCHES "Release")
 endif()
 
 add_subdirectory(src)
+
+set(CONFIG_FILE "${CMAKE_SOURCE_DIR}/cmake/${PROJECT_NAME}-config.cmake")
+set(CONFIG_VERSION_FILE "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake")
+set(CONFIG_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/sleqp")
+
+set(TARGET_FILE "${PROJECT_NAME}-targets.cmake")
+
+install(EXPORT ${PROJECT_NAMESPACE}SCARP
+  FILE ${TARGET_FILE}
+  NAMESPACE
+  ${PROJECT_NAMESPACE}
+  DESTINATION
+  ${CONFIG_DESTINATION}
+  COMPONENT "libraries"
+)
+
+write_basic_package_version_file(
+  ${CONFIG_VERSION_FILE}
+  VERSION ${PROJECT_VERSION}
+  COMPATIBILITY SameMajorVersion
+)
+
+install(
+  FILES
+  ${CONFIG_FILE}
+  ${CONFIG_VERSION_FILE}
+  DESTINATION
+  ${CONFIG_DESTINATION}
+  COMPONENT "libraries"
+)
