--- a/src/scarp/CMakeLists.txt
+++ b/src/scarp/CMakeLists.txt
@@ -38,19 +38,23 @@ set(HEADERS
 
 add_library(scarp SHARED ${COMMON_SRC})
 
+target_link_libraries(scarp
+  ${Boost_LIBRARIES})
+
 target_include_directories(scarp
   PUBLIC
-  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+  "$<BUILD_INTERFACE:${SCARP_DIR}>"
   "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
   ${BOOST_INCLUDE_DIRS}
 )
 
 install(TARGETS scarp
-  EXPORT SCARP::SCARP
+  EXPORT ${PROJECT_NAMESPACE}SCARP
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  COMPONENT "libraries")
 
 install(FILES ${HEADERS}
   DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/scarp"
@@ -59,11 +63,6 @@ install(FILES ${HEADERS}
 set_target_properties(scarp
   PROPERTIES
   VERSION ${PROJECT_VERSION})
-
-set(LIBS
-  ${Boost_LIBRARIES})
-
-target_link_libraries(scarp ${LIBS})
 
 configure_file(defs.hh.in ${CMAKE_BINARY_DIR}/defs.hh)
 
