--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
-include_directories(${CMAKE_SOURCE_DIR}/src/main)
+#include_directories(${CMAKE_SOURCE_DIR}/src/main)
 
-add_subdirectory(main)
+set(SCARP_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+
+add_subdirectory(scarp)
 add_subdirectory(test)
 add_subdirectory(perf)
