Add coarseness to mesh

--- a/src/scarp/CMakeLists.txt
+++ b/src/scarp/CMakeLists.txt
@@ -6,6 +6,7 @@ set(COMMON_SRC
   controls.cc
   cost_function.cc
   log.cc
+  mesh.cc
   parameters.cc
   scarp/scarp_label.cc
   scarp/scarp_program.cc
