Prefix ifdef names with project name

--- a/src/scarp/defs.hh.in
+++ b/src/scarp/defs.hh.in
@@ -1,9 +1,9 @@
-#ifndef DEFS_HH
-#define DEFS_HH
+#ifndef SCARP_DEFS_HH
+#define SCARP_DEFS_HH
 
 #define BASE_DIRECTORY "@CMAKE_SOURCE_DIR@"
 #define DATASET_DIRECTORY "@CMAKE_SOURCE_DIR@/dataset"
 
 #define TESTS_DIRECTORY "@CMAKE_SOURCE_DIR@/dataset/tests"
 
-#endif /* DEFS_HH */
+#endif /* SCARP_DEFS_HH */
