Add dwelling time unit tests

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -36,3 +36,4 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
 add_unit_test(scarp/uniform_mesh_test)
 add_unit_test(scarp/adaptive_mesh_test)
 add_unit_test(scarp/adaptive_mesh_vc_test)
+add_unit_test(dwt/dwt_program_test)
