--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Build project
         run: |
           cmake --build build
+      - name: Build benchmarks
+        run: |
+          cmake --build build -t build_benchmarks
       - name: Test project
         run: |
           cmake --build build -t test
